--- a/2021_game.csproj
+++ b/2021_game.csproj
@@ -60,6 +60,7 @@
     <Compile Include="FrmHighScores.Designer.cs">
       <DependentUpon>FrmHighScores.cs</DependentUpon>
     </Compile>
+    <Compile Include="HighScores.cs" />
     <Compile Include="Lettuce.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
